# ChessGameSDL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Board.cpp  Board.hpp  DragEntity.hpp  Entity.hpp  EntityCommand.hpp  Exit.cpp  Exit.hpp  Game.cpp  Game.hpp  GameScene.hpp  Menu.cpp  Menu.hpp  Move.hpp  MoveInfo.hpp  Piece.cpp  Piece.hpp  PieceBuilder.hpp  Player.cpp  Player.hpp  Playing.cpp  Playing.hpp  SceneManager.cpp  SceneManager.hpp  Timestamp.cpp  Timestamp.hpp  main.cpp
